--- a/src/sass/banner.scss
+++ b/src/sass/banner.scss
@@ -1,6 +1,38 @@
 .banner {
+    position: relative;
     background-color: #ffffff;
     text-align: center;
-    justify-content: center;
     margin-top: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
+    overflow: hidden;
+    border-radius: 25px;
+
+    .banner-image {
+        background-color: #ffffff;
+        border-radius: 25px;
+        width: 100%;
+        height: 223px;
+        object-fit: cover; 
+        object-position: center; 
+        display: block;
+        background: rgba(0, 0, 0, 0.6); 
+        background-blend-mode: darken;
+    }
+
+    .banner-text {
+        position: absolute; 
+        top: 50%; 
+        left: 50%; 
+        transform: translate(-50%, -50%); 
+        color: #ffffff; // Couleur du texte
+        font-size: 48px; // Taille du texte
+        font-weight: 700; // Gras pour le texte
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+        z-index: 1; 
+        padding: 10px; 
+        max-width: 90%; 
+        margin: 0;
+        white-space: nowrap; 
+    }
 }
