--- a/src/sass/header.css
+++ b/src/sass/header.css
@@ -4,6 +4,9 @@
   justify-content: space-between;
   padding: 20px;
   background-color: #ffffff;
+  margin-top: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 .header .header-logo {
   height: 68px;
