--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -3,7 +3,10 @@
     align-items: center;       
     justify-content: space-between; 
     padding: 20px;             
-    background-color: #ffffff;  
+    background-color: #ffffff; 
+    margin-top: 50px; 
+    margin-left: 50px;
+    margin-right: 50px;
     
     .header-logo {
         height: 68px;
