--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -15,6 +15,9 @@ code {
   justify-content: space-between;
   padding: 20px;
   background-color: #ffffff;
+  margin-top: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 .header .header-logo {
   height: 68px;
@@ -37,4 +40,6 @@ code {
   text-align: center;
   justify-content: center;
   margin-top: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
 }/*# sourceMappingURL=index.css.map */
