--- a/src/css/header.css
+++ b/src/css/header.css
@@ -22,4 +22,6 @@
 }
 .header .header-nav .nav-link[href="#a-propos"] {
   text-decoration: none;
-}/*# sourceMappingURL=header.css.map */
+}
+
+/*# sourceMappingURL=header.css.map */
