--- a/src/css/logements-list.css
+++ b/src/css/logements-list.css
@@ -5,4 +5,6 @@
   padding: 20px; /* Espacement autour des cartes */
   max-width: 1200px; /* Largeur maximale pour l'alignement */
   margin: 0 auto; /* Centrage du conteneur */
-}/*# sourceMappingURL=logements-list.css.map */
+}
+
+/*# sourceMappingURL=logements-list.css.map */
