--- a/src/css/rating.css
+++ b/src/css/rating.css
@@ -7,4 +7,6 @@
   width: 24px;
   height: auto;
   margin-right: 4px;
-}/*# sourceMappingURL=rating.css.map */
+}
+
+/*# sourceMappingURL=rating.css.map */
