--- a/src/sass/logements-list.scss
+++ b/src/sass/logements-list.scss
@@ -1,4 +1,4 @@
-.logement-list {
+.logements-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* Trois colonnes */
     gap: 20px; /* Espace entre les cartes */
