--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -13,10 +13,8 @@
   border-radius: 25px;
   width: 100%;
   height: 223px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
+  object-fit: cover;
+  object-position: center;
   display: block;
   background: rgba(0, 0, 0, 0.6);
   background-blend-mode: darken;
@@ -35,4 +33,6 @@
   max-width: 90%;
   margin: 0;
   white-space: nowrap;
-}/*# sourceMappingURL=banner.css.map */
+}
+
+/*# sourceMappingURL=banner.css.map */
