--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -14,4 +14,6 @@
 .footer .footer-text {
   color: #ffffff;
   font-size: 24px;
-}/*# sourceMappingURL=footer.css.map */
+}
+
+/*# sourceMappingURL=footer.css.map */
