--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -14,3 +14,12 @@ body {
 
 @import 'header'; 
 @import 'banner';
+@import 'card';
+@import 'equipments-list';
+@import 'footer';
+@import 'gallery';
+@import 'fiche-logement';
+@import 'host-info';
+@import 'logements-list';
+@import 'rating';
+@import 'tags-list';
