--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -1,4 +1,8 @@
+a {
 
+.card_link{
+    width: 340px;
+    height: 340px;
 .card {
     border: 1px solid #ddd; 
     border-radius: 10px; 
@@ -38,4 +42,5 @@
         text-decoration: none;
     }
 }
-  
+}
+} 
