--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,7 +1,9 @@
 // src/sass/Home.scss
-.home-container {
+.home-content {
     background-color: lightblue;
     padding: 20px;
     border-radius: 8px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
   }
   
