--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,7 +1,9 @@
-// src/sass/Home.scss
 .home-content {
-    background-color: lightblue;
-    padding: 20px;
+    background-color: #f6f6f6;
+    width: 100%;
+    margin-top: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
     border-radius: 8px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
