--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,8 +1,8 @@
 .header {
+    width: 100%;
     display: flex;              
     align-items: center;       
-    justify-content: space-between; 
-    padding: 20px;             
+    justify-content: space-between;              
     background-color: #ffffff; 
     margin-top: 50px; 
     margin-left: 50px;
