--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,20 +1,23 @@
 .gallery {
+    max-width: 100%;
     position: relative;
-    width: 1240px;
-    height: 643px;
+    width: auto;
+    height: auto;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
 
     &__image-container {
+        max-width: 1400px;
         width: 100%;
-        height: 100%;
+        height: auto;
         display: flex;
         align-items: center;
         justify-content: center;
 
         img {
+            max-width: 1400px;
             width: 100%;
             height: 100%;
             object-fit: cover;
@@ -22,6 +25,9 @@
     }
 
     &__button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
@@ -29,17 +35,17 @@
         border: none;
         cursor: pointer;
         z-index: 10;
-        width: 96px;
-        height: 119.64px;
+        img {
+            width: 46.68px; 
+            height: 79.2px; 
+        }
 
         &--prev {
             left: 10px;
-            background-color: rgba(255, 255, 255, 0.5);
         }
 
         &--next {
             right: 10px;
-            background-color: rgba(255, 255, 255, 0.5);
         }
     }
 
