--- a/src/sass/_tags-list.scss
+++ b/src/sass/_tags-list.scss
@@ -1,11 +1,24 @@
 .tag-list {
     display: flex;
-    gap: 10px; // Espace entre les tags
-    flex-wrap: wrap; // Si vous voulez que les tags passent à la ligne si l'espace est insuffisant
+    gap: 10px;
+    width: 365px;
+    list-style: none;
+    flex-direction: row;
+    margin: 0;
+    padding: 0;
+    justify-content: flex-start;
+    .tag {
+        padding: 5px 10px;
+        background-color: #FF6060;
+        color: #ffffff;
+        border-radius: 10px;
+        text-align: center;
+        height: 25px;
+        font-family: Montserrat;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 25px;
+    } 
 }
 
-.tag {
-    padding: 5px 10px;
-    background-color: #eee;
-    border-radius: 5px;
-}
+
