--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,8 +1,6 @@
 @import 'banner';
 @import 'card';
 @import 'collapse';
-@import 'description';
-@import 'equipments-list';
 @import 'fiche-logement';
 @import 'footer';
 @import 'header';
@@ -11,4 +9,6 @@
 @import 'host-info';
 @import 'index';
 @import 'rating';
-@import 'tags-list'
+@import 'tags-list';
+@import 'about'; 
+@import 'title-location';
