--- a/src/sass/_banner.scss
+++ b/src/sass/_banner.scss
@@ -1,15 +1,15 @@
 .banner {
+    max-width: 1400px;
     display: flex;
+    justify-content: center;
     width: 100%;
     height: 223px;
     position: relative;
     background-color: #ffffff;
     text-align: center;
-    margin-top: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
     overflow: hidden;
     border-radius: 25px;
+    margin: 0 auto;
 
     .banner-image {
         background-color: #ffffff;
