--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,12 +1,12 @@
 .header {
+    max-width: 1400px;
     width: 100%;
     display: flex;              
     align-items: center;       
     justify-content: space-between;              
-    background-color: #ffffff; 
-    margin-top: 50px; 
-    margin-left: 50px;
-    margin-right: 50px;
+    background-color: #ffffff;
+    margin: 0 auto; 
+
     
     .header-logo {
         height: 68px;
