--- a/src/sass/_collapse.scss
+++ b/src/sass/_collapse.scss
@@ -33,6 +33,9 @@
   .collapse-content {
     padding: 10px;
     display: none;
+    font-size: 18px;
+    line-height: 25.67px;
+    text-align: left;
   }
 
   &.open .collapse-content {
@@ -41,5 +44,31 @@
 
   &.open .collapse-arrow {
     transform: rotate(180deg);
+  }
+}
+
+@media (max-width: 768px) {
+  .collapse {
+    .collapse-header {
+      height: 30px; 
+      
+      .collapse-title {
+        font-family: Montserrat;
+        font-size: 13px; 
+        font-weight: 700;
+        line-height: 18.54px;
+        text-align: left;
+      }
+
+      .collapse-arrow {
+        width: 16px;      
+        height: 9.14px;   
+      }
+    }
+    .collapse-content {
+      font-size: 13px;
+      line-height: 18.54px;
+      text-align: left;
+    }
   }
 }
