--- a/src/sass/_banner.scss
+++ b/src/sass/_banner.scss
@@ -39,3 +39,22 @@
         white-space: nowrap; 
     }
 }
+
+@media (max-width: 768px) {
+    .banner {
+        height: 111px; 
+        
+        .banner-image {
+            height: 111px; 
+        }
+
+        .banner-text {
+            font-family: 'Montserrat', sans-serif;
+            font-size: 24px; 
+            font-weight: 700; 
+            line-height: 24px; 
+            text-align: left; 
+            white-space: normal; 
+        }
+    }
+}
