--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -8,7 +8,7 @@
   max-height: 340px;
   border: 1px solid #ddd;
   border-radius: 10px; 
-  background-color: #fff;
+  background-color: #ffffff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
   position: relative; 
@@ -41,5 +41,42 @@
     text-align: center;
     box-sizing: border-box;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); 
+  }
+}
+
+@media (max-width: 768px) {
+  .card {
+    max-width: 100%; 
+    max-height: auto; 
+    border-radius: 10px; 
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px 0; 
+
+    .card__img {
+      width: 100%; 
+      height: 100%; 
+      object-fit: cover; 
+      border-radius: 10px 10px 0 0; 
+    }
+
+    .card__title {
+      position: absolute; 
+      bottom: 10px; 
+      left: 10px;
+      right: 10px;
+      padding: 10px;
+      font-family: Montserrat;
+      font-size: 18px; 
+      font-weight: 700;
+      line-height: 25.67px;
+      color: #ffffff; 
+      text-align: left; 
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); 
+    }
   }
 }
