--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 25px;
 
     &__image-container {
         max-width: 1400px;
@@ -32,9 +33,9 @@
         top: 50%;
         transform: translateY(-50%);
         background: none;
-        border: none;
         cursor: pointer;
         z-index: 10;
+        border: none;
         img {
             width: 46.68px; 
             height: 79.2px; 
@@ -51,10 +52,10 @@
 
     &__slide-number {
         position: absolute;
-        bottom: 10px;
-        right: 10px;
-        background-color: rgba(0, 0, 0, 0.5);
-        color: #fff;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        color: #ffffff;
         padding: 5px 10px;
         border-radius: 3px;
         font-size: 24px;
@@ -63,4 +64,23 @@
         text-align: center;
         line-height: 32.4px;
     }
+
+@media (max-width: 768px) {
+    .gallery {
+        &__image-container img {
+            height: 255px;
+            border-radius: 5px;
+        }
+        &__button {
+            img {
+                width: 24px;  
+                height: 24px;
+            }
+        }
+
+        &__slide-number {
+            display: none;
+        }
+    }
+}
 }
