--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -40,6 +40,22 @@
   white-space: nowrap;
 }
 
+@media (max-width: 768px) {
+  .banner {
+    height: 111px;
+  }
+  .banner .banner-image {
+    height: 111px;
+  }
+  .banner .banner-text {
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 24px;
+    text-align: left;
+    white-space: normal;
+  }
+}
 .card-link {
   text-decoration: none;
 }
@@ -49,7 +65,7 @@
   max-height: 340px;
   border: 1px solid #ddd;
   border-radius: 10px;
-  background-color: #fff;
+  background-color: #ffffff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
   position: relative;
@@ -83,6 +99,41 @@
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
 }
 
+@media (max-width: 768px) {
+  .card {
+    max-width: 100%;
+    max-height: auto;
+    border-radius: 10px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px 0;
+  }
+  .card .card__img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 10px 10px 0 0;
+  }
+  .card .card__title {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
+    padding: 10px;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 25.67px;
+    color: #ffffff;
+    text-align: left;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+  }
+}
 .collapse {
   display: flex;
   flex-direction: column;
@@ -116,6 +167,9 @@
 .collapse .collapse-content {
   padding: 10px;
   display: none;
+  font-size: 18px;
+  line-height: 25.67px;
+  text-align: left;
 }
 .collapse.open .collapse-content {
   display: block;
@@ -124,11 +178,31 @@
   transform: rotate(180deg);
 }
 
+@media (max-width: 768px) {
+  .collapse .collapse-header {
+    height: 30px;
+  }
+  .collapse .collapse-header .collapse-title {
+    font-family: Montserrat;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 18.54px;
+    text-align: left;
+  }
+  .collapse .collapse-header .collapse-arrow {
+    width: 16px;
+    height: 9.14px;
+  }
+  .collapse .collapse-content {
+    font-size: 13px;
+    line-height: 18.54px;
+    text-align: left;
+  }
+}
 .fiche-logement {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 .fiche-logement .fiche-logement__content {
   flex: 1;
@@ -194,6 +268,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  gap: 20px;
 }
 .fiche-logement .logement-info .collapse-logement .description {
   width: 582px;
@@ -203,6 +278,29 @@
 }
 .fiche-logement .logement-info .collapse-logement .equipments ul {
   list-style: none;
+}
+@media (max-width: 768px) {
+  .fiche-logement .gallery .gallery__img {
+    border-radius: 5px;
+  }
+  .fiche-logement .logement-info {
+    display: flex;
+    flex-direction: column;
+  }
+  .fiche-logement .logement-info .infos {
+    display: flex;
+    flex-direction: column;
+  }
+  .fiche-logement .logement-info .infos .rightcolumn {
+    margin: 0;
+    width: 100%;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .fiche-logement .logement-info .collapse-logement {
+    flex-direction: column;
+  }
 }
 
 .footer {
@@ -250,6 +348,37 @@
   text-decoration: none;
 }
 
+@media (max-width: 768px) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    height: auto;
+  }
+  .header .header-logo {
+    width: 145px;
+    height: 46.88px;
+  }
+  .header .header-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: auto;
+  }
+  .header .header-nav .nav-link {
+    font-family: "Montserrat", sans-serif;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 17.11px;
+    text-align: right;
+    color: #000000;
+    margin-left: 15px;
+  }
+  .header .header-nav .nav-link:hover {
+    text-decoration: underline;
+  }
+}
 .home {
   max-width: 1400px;
   width: 100%;
@@ -272,12 +401,17 @@
   justify-items: center;
   box-sizing: border-box;
 }
+
 @media (max-width: 768px) {
+  .home {
+    max-width: 768px;
+  }
   .home .home-content {
+    background-color: #ffffff;
     grid-template-columns: 1fr;
+    padding: 0;
   }
 }
-
 .gallery {
   max-width: 100%;
   position: relative;
@@ -287,6 +421,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 25px;
 }
 .gallery__image-container {
   max-width: 1400px;
@@ -311,9 +446,9 @@
   top: 50%;
   transform: translateY(-50%);
   background: none;
-  border: none;
   cursor: pointer;
   z-index: 10;
+  border: none;
 }
 .gallery__button img {
   width: 46.68px;
@@ -327,10 +462,10 @@
 }
 .gallery__slide-number {
   position: absolute;
-  bottom: 10px;
-  right: 10px;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #fff;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #ffffff;
   padding: 5px 10px;
   border-radius: 3px;
   font-size: 24px;
@@ -339,16 +474,26 @@
   text-align: center;
   line-height: 32.4px;
 }
+@media (max-width: 768px) {
+  .gallery .gallery__image-container img {
+    height: 255px;
+    border-radius: 5px;
+  }
+  .gallery .gallery__button img {
+    width: 24px;
+    height: 24px;
+  }
+  .gallery .gallery__slide-number {
+    display: none;
+  }
+}
 
 .host-info {
   margin: 0;
   display: flex;
   align-items: center;
-  height: 64px;
 }
 .host-info .host-name {
-  width: 93px;
-  height: 52px;
   font-family: "Montserrat", sans-serif;
   font-size: 18px;
   font-weight: 500;
@@ -364,6 +509,19 @@
   height: 64px;
   border-radius: 50%;
   margin-left: 10px;
+}
+@media (max-width: 768px) {
+  .host-info .host-name {
+    font-family: Montserrat;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 17.11px;
+    text-align: right;
+  }
+  .host-info .host-picture {
+    width: 32px;
+    height: 32px;
+  }
 }
 
 body {
@@ -389,6 +547,12 @@ code {
   width: auto;
 }
 
+@media (max-width: 768px) {
+  img {
+    height: 13px;
+    width: auto;
+  }
+}
 .tag-list {
   display: flex;
   gap: 10px;
@@ -411,6 +575,16 @@ code {
   font-weight: 700;
   line-height: 25px;
 }
+@media (max-width: 768px) {
+  .tag-list .tag {
+    height: 18px;
+    font-family: Montserrat;
+    font-size: 10px;
+    font-weight: 700;
+    line-height: 18px;
+    text-align: center;
+  }
+}
 
 .about {
   max-width: 1400px;
@@ -420,12 +594,22 @@ code {
   justify-content: center;
 }
 .about .about-collapse {
-  width: 100%;
+  max-width: 1023px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: auto 100px;
 }
 
+@media (max-width: 768px) {
+  .about {
+    padding: 0 20px;
+  }
+  .about .about-collapse {
+    max-width: 100%;
+    margin: 0;
+  }
+}
 .title-location {
   display: flexbox;
   flex-direction: column;
@@ -445,4 +629,106 @@ code {
   font-size: 18px;
   margin: 0;
   height: 26px;
+}
+@media (max-width: 768px) {
+  .title-location .title {
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 25.67px;
+    text-align: left;
+  }
+  .title-location .location {
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 19.96px;
+    text-align: left;
+  }
+}
+
+.error-page {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1400px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding: 0;
+}
+.error-page .error-content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1400px;
+  justify-content: center;
+  align-items: center;
+  height: 70%;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.error-page .error-content .error-status {
+  display: flex;
+  margin-top: 20px;
+  font-family: Montserrat;
+  font-size: 288px;
+  font-weight: 700;
+  line-height: 410.69px;
+  text-align: center;
+  color: #FF6060;
+  margin-bottom: 20px;
+  height: 300px;
+  align-items: center;
+}
+.error-page .error-content .error-message {
+  font-family: Montserrat, sans-serif;
+  font-size: 1.5em;
+  color: #FF6060;
+  margin: 20px 0 50px 0;
+  font-family: Montserrat;
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 51.34px;
+  text-align: left;
+}
+.error-page .error-content .error-home-link {
+  margin-bottom: 50px;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 25.67px;
+  text-align: left;
+  color: #000000;
+}
+.error-page .error-content .error-home-link:hover {
+  text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  .error-page {
+    padding: 0 20px;
+  }
+  .error-page .error-content {
+    height: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .error-page .error-content .error-status {
+    font-size: 96px;
+    line-height: 136.9px;
+    height: auto;
+    margin-bottom: 20px;
+  }
+  .error-page .error-content .error-message {
+    font-size: 18px;
+    line-height: 25.67px;
+    text-align: center;
+    margin: 10px 0 30px 0;
+  }
+  .error-page .error-content .error-home-link {
+    font-size: 14px;
+    line-height: 19.96px;
+    text-align: left;
+  }
 }/*# sourceMappingURL=main.css.map */
