Maj media query

--- a/src/sass/_banner.scss
+++ b/src/sass/_banner.scss
@@ -45,7 +45,10 @@
         height: 111px; 
         
         .banner-image {
-            height: 111px; 
+            height: 111px;
+            width: 100%;
+            max-width: 768px;
+            margin-right: 35px; 
         }
 
         .banner-text {
