--- a/src/sass/_collapse.scss
+++ b/src/sass/_collapse.scss
@@ -51,6 +51,7 @@
   .collapse {
     .collapse-header {
       height: 30px; 
+      margin-right: 35px;
       
       .collapse-title {
         font-family: Montserrat;
