--- a/src/sass/_title-location.scss
+++ b/src/sass/_title-location.scss
@@ -19,12 +19,16 @@
     }
 
     @media (max-width: 768px) {
+      
+        
         .title {
             font-family: Montserrat;
             font-size: 18px;
             font-weight: 500;
             line-height: 25.67px;
             text-align: left;
+            margin-bottom: 0;
+            padding: 0;
         }
         .location {
             font-family: Montserrat;
@@ -33,5 +37,6 @@
             line-height: 19.96px;
             text-align: left;
         }
+      
     }
 }
