--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -284,16 +284,25 @@
   list-style: none;
 }
 @media (max-width: 768px) {
-  .fiche-logement .gallery .gallery__img {
+  .fiche-logement .gallery {
+    height: 255px;
+  }
+  .fiche-logement .gallery .gallery .gallery__img {
     border-radius: 5px;
   }
   .fiche-logement .logement-info {
     display: flex;
     flex-direction: column;
+    margin-top: 0;
   }
   .fiche-logement .logement-info .infos {
     display: flex;
     flex-direction: column;
+    gap: 20px;
+  }
+  .fiche-logement .logement-info .infos .leftcolumn {
+    gap: 20px;
+    margin-bottom: 0;
   }
   .fiche-logement .logement-info .infos .rightcolumn {
     margin: 0;
@@ -304,6 +313,8 @@
   }
   .fiche-logement .logement-info .collapse-logement {
     flex-direction: column;
+    gap: 0;
+    margin-bottom: 20px;
   }
 }
 
@@ -486,6 +497,11 @@
   line-height: 32.4px;
 }
 @media (max-width: 768px) {
+  .gallery .gallery {
+    margin: 0;
+    padding: 0;
+    height: 255px;
+  }
   .gallery .gallery__image-container img {
     height: 255px;
     border-radius: 5px;
@@ -648,6 +664,8 @@ code {
     font-weight: 500;
     line-height: 25.67px;
     text-align: left;
+    margin-bottom: 0;
+    padding: 0;
   }
   .title-location .location {
     font-family: Montserrat;
