Correction styles about/fiche-logement

--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -47,7 +47,7 @@
 @media (max-width: 768px) {
   .card {
     max-width: 100%; 
-    max-height: auto; 
+    height: auto; 
     border-radius: 10px; 
     background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
