--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -4,22 +4,26 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
+  
     .about-collapse {
-        max-width: 1023px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        margin: auto 100px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0;
+      padding: 20px 50px;
     }
-}
-
-@media (max-width: 768px) {
-    .about {
-        padding: 0 20px;
-
-        .about-collapse {
-            max-width: 100%;  
-            margin: 0;   
-        }
+  
+    @media (max-width: 768px) {
+      padding: 0 20px;
+  
+      .about-collapse {
+        max-width: 100%;
+        margin: 0;
+        padding: 20px 0;
+      }
     }
-}
+  }
+  
