--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,13 +1,14 @@
 .gallery {
-    max-width: 100%;
+    max-width: 1400px;
     position: relative;
-    width: auto;
+    width: 100%;
     height: auto;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 25px;
+    margin: 0;
 
     &__image-container {
         max-width: 1400px;
