--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -5,6 +5,16 @@ body {
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 0;
+  }
+
+  #root {
+    width: 100%;
+    max-width: 1400px;
   }
   
   code {
